{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 134,
  "lineage": "360925d6-b404-02f7-c5e1-8b5432c4f517",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "agricam_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:710827005502:internet-gateway/igw-05c1e3640ef42c64b",
            "id": "igw-05c1e3640ef42c64b",
            "owner_id": "710827005502",
            "vpc_id": "vpc-00baf7b35f1eb52e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.agricam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "agricam_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:710827005502:route-table/rtb-00fd6d7e732adec4e",
            "id": "rtb-00fd6d7e732adec4e",
            "owner_id": "710827005502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c1e3640ef42c64b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00baf7b35f1eb52e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.agricam_igw",
            "aws_vpc.agricam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "agricam_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b6af6ec53194319",
            "route_table_id": "rtb-00fd6d7e732adec4e",
            "subnet_id": "subnet-01d8be1c05ad3d642"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.agricam_igw",
            "aws_route_table.agricam_rt",
            "aws_subnet.agricam_subnet",
            "aws_vpc.agricam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "agricam_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:710827005502:security-group/sg-04ae73eda934bcb54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ae73eda934bcb54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "129.0.60.178/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260514214452390600000001",
            "name_prefix": "terraform-",
            "owner_id": "710827005502",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00baf7b35f1eb52e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.agricam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "agricam_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:710827005502:subnet/subnet-01d8be1c05ad3d642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8be1c05ad3d642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710827005502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00baf7b35f1eb52e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.agricam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "agricam_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:710827005502:vpc/vpc-00baf7b35f1eb52e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06835a330efe0d591",
            "default_route_table_id": "rtb-06661f727056b8a7b",
            "default_security_group_id": "sg-0d3a825471f137b19",
            "dhcp_options_id": "dopt-09baecc3b85c94c95",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00baf7b35f1eb52e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06661f727056b8a7b",
            "owner_id": "710827005502"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}